--- a/layouts/partials/components/searchBar.html
+++ b/layouts/partials/components/searchBar.html
@@ -1,6 +1,8 @@
 {{ $class := .Class }}
 
-<div id="search-bar" class="{{ $class }} flex flex-row-reverse items-center justify-end p-m rounded-pill border-container hover:border-brand-light dark:hover:border-brand-dark">
-    <label><input class="peer txt-input" placeholder="Search"/></label>
-    <i class="fas fa-search mr-s text-info-bold-light dark:text-info-bold-dark peer-focus:text-info-bold-light dark:peer-focus:text-info-bold-dark peer-placeholder-shown:text-info-light dark:peer-placeholder-shown:text-info-dark"></i>
-</div>
+{{ if site.Params.searchBar }}
+    <div id="search-bar" class="{{ $class }} flex flex-row-reverse items-center justify-end p-m rounded-pill border-container hover:border-brand-light dark:hover:border-brand-dark">
+        <label><input class="peer txt-input" placeholder="Search"/></label>
+        <i class="fas fa-search mr-s text-info-bold-light dark:text-info-bold-dark peer-focus:text-info-bold-light dark:peer-focus:text-info-bold-dark peer-placeholder-shown:text-info-light dark:peer-placeholder-shown:text-info-dark"></i>
+    </div>
+{{ end }}
