--- a/layouts/partials/head/css.html
+++ b/layouts/partials/head/css.html
@@ -1,8 +1,8 @@
-{{- with resources.Get "css/main.css" | css.PostCSS }}
+{{- with resources.Get "css/main.css" | postCSS }}
   {{- if eq hugo.Environment "development" }}
     <link rel="stylesheet" href="{{ .RelPermalink }}">
   {{- else }}
-    {{- with . | minify | fingerprint }}
+    {{- with . | minify | fingerprint | resources.PostProcess }}
       <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
     {{- end }}
   {{- end }}
