[fix] home mobile layout

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,13 +5,13 @@
   {{ partial "head.html" . }}
 </head>
 <body class="bg-primary-light dark:bg-primary-dark">
-  <header class="p-s m:p-xl">
+  <header class="p-m m:p-xl">
     {{ partial "header.html" . }}
   </header>
-  <main class="p-s m:p-xl">
+  <main class="p-m m:p-xl">
     {{ block "main" . }}{{ end }}
   </main>
-  <footer class="p-s m:p-xl">
+  <footer class="p-m m:p-xl">
     {{ partial "footer.html" . }}
   </footer>
 </body>
