--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div class="flex flex-col justify-center items-center space-y-l">
-        <h1 class="heading-xl font-semibold">{{ site.Params.author }}</h1>
+        <h1 class="heading-xl font-normal">{{ site.Params.author }}</h1>
         {{ partial "components/socialLinks.html" }}
         {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
     </div>
