--- a/assets/css/articles.css
+++ b/assets/css/articles.css
@@ -8,9 +8,13 @@
 }
 
 .article h3 {
-    @apply heading-s font-semibold mb-m;
+    @apply heading-s font-semibold;
 }
 
 .article p {
+    @apply text-xl text-primary-light dark:text-primary-dark;
+}
+
+.article ins {
     @apply text-xl text-primary-light dark:text-primary-dark;
 }
