--- a/layouts/shortcodes/projectKeywords.html
+++ b/layouts/shortcodes/projectKeywords.html
@@ -1,1 +1,3 @@
-<ins>Keywords:</ins> <span class="text-notice-light dark:text-notice-dark">{{with .Get 0}}{{ . }}{{ end }}</span>
+<span class="!text-m">
+    <ins class="!text-m font-semibold">Keywords:</ins> <span class="text-notice-light dark:text-notice-dark">{{with .Get 0}}{{ . }}{{ end }}</span>
+</span>
