--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col space-y-xl items-center justify-center">
-    <i class="fas fa-chevron-up text-7xl text-brand-light dark:text-info-dark cursor-pointer"
+    <i class="fas fa-chevron-up text-7xl text-brand-light dark:text-info-dark hover:text-notice-light hover:dark:text-notice-dark cursor-pointer"
        onclick="document.body.scrollTop = document.documentElement.scrollTop = 0;"></i>
     <p class="txt-l text-center">{{ site.Copyright | safeHTML }}<br>Copyright {{ now.Year }}. All rights reserved.</p>
     {{ partial "components/socialLinks.html" (dict "InvertColors" "true" )}}
