--- a/layouts/partials/components/socialLinks.html
+++ b/layouts/partials/components/socialLinks.html
@@ -6,8 +6,10 @@
             <li class="cursor-pointer
                 {{ if $invertColors }}
                     even:text-brand-light odd:text-info-light dark:even:text-brand-dark dark:odd:text-info-dark
+                    hover:even:text-brand-hover-light hover:odd:text-notice-light dark:hover:even:text-brand-hover-dark dark:hover:odd:text-notice-dark
                 {{ else }}
                     odd:text-brand-light even:text-info-light dark:odd:text-brand-dark dark:even:text-info-dark
+                    hover:odd:text-brand-hover-light hover:even:text-notice-light dark:hover:odd:text-brand-hover-dark dark:hover:even:text-notice-dark
                 {{ end }}">
                 <a href="{{ .url }}" rel="{{ .rel }}" target="{{ .target }}">
                     <i class="{{ .icon }} text-3xl"></i>
