--- a/layouts/shortcodes/projectTitle.html
+++ b/layouts/shortcodes/projectTitle.html
@@ -1,34 +1,37 @@
 <div class="flex space-x-m mb-m mt-l m:mt-none items-center justify-center m:justify-normal project-title">
     <h3 class="heading-s">{{ with .Get "title" }}{{ . }}{{ end }}</h3>
-    <div class="flex space-x-xs">
+    <div class="flex space-x-xs items-stretch">
         {{- if .Get "link1" -}}
-            <a href='{{ with .Get "link1" }}{{ . }}{{ end }}' target="_blank">
-                <button class="btn-brand w-5xl w-fit flex items-center">
-                    {{- if .Get "icon1" -}}
-                        <i class='{{ with .Get "icon1" }}{{ . }}{{ end }} mr-xs'></i>
-                    {{- end -}}
-                    {{ with .Get "title1" }} {{ . }} {{ end }}
-                </button>
+            <a href='{{ with .Get "link1" }}{{ . }}{{ end }}' target="_blank" class="btn-brand w-fit flex items-center self-stretch">
+                {{- if .Get "icon1" -}}
+                    <i class='{{ with .Get "icon1" }}{{ . }}{{ end }} mr-s'></i>
+                {{- end -}}
+                <div class="flex flex-col items-center">
+                    {{ with .Get "title1" }}{{ . }}{{ end }}
+                    <span class="text-xs">{{ with .Get "subtitle1" }}{{ . }}{{ end }}</span>
+                </div>
             </a>
         {{- end -}}
         {{- if .Get "link2" -}}
-            <a href='{{ with .Get "link2" }}{{ . }}{{ end }}' target="_blank">
-                <button class="btn-secondary w-5xl w-fit flex items-center">
-                    {{- if .Get "icon2" -}}
-                        <i class='{{ with .Get "icon2" }}{{ . }}{{ end }} mr-xs'></i>
-                    {{- end -}}
+            <a href='{{ with .Get "link2" }}{{ . }}{{ end }}' target="_blank" class="btn-secondary w-fit flex items-center self-stretch">
+                {{- if .Get "icon2" -}}
+                    <i class='{{ with .Get "icon2" }}{{ . }}{{ end }} mr-s'></i>
+                {{- end -}}
+                <div class="flex flex-col items-center">
                     {{ with .Get "title2" }}{{ . }}{{ end }}
-                </button>
+                    <span class="text-xs">{{ with .Get "subtitle2" }}{{ . }}{{ end }}</span>
+                </div>
             </a>
         {{- end -}}
         {{- if .Get "link3" -}}
-            <a href='{{ with .Get "link3" }}{{ . }}{{ end }}' target="_blank">
-                <button class="btn w-5xl w-fit flex items-center">
-                    {{- if .Get "icon3" -}}
-                        <i class='{{ with .Get "icon3" }}{{ . }}{{ end }} mr-xs'></i>
-                    {{- end -}}
+            <a href='{{ with .Get "link3" }}{{ . }}{{ end }}' target="_blank" class="btn w-fit flex items-center self-stretch">
+                {{- if .Get "icon3" -}}
+                    <i class='{{ with .Get "icon3" }}{{ . }}{{ end }} mr-s'></i>
+                {{- end -}}
+                <div class="flex flex-col items-center">
                     {{ with .Get "title3" }}{{ . }}{{ end }}
-                </button>
+                    <span class="text-xs">{{ with .Get "subtitle3" }}{{ . }}{{ end }}</span>
+                </div>
             </a>
         {{- end -}}
     </div>
