--- a/layouts/shortcodes/projectKeywords.html
+++ b/layouts/shortcodes/projectKeywords.html
@@ -1,3 +1,3 @@
 <span class="!text-m">
-    <ins class="!text-m font-semibold">Keywords:</ins> <span class="text-notice-light dark:text-notice-dark">{{with .Get 0}}{{ . }}{{ end }}</span>
+    <ins class="!text-m font-semibold">{{if .Get 1}}{{with .Get 1}}{{ . }}{{ end }}{{ else }}Keywords{{ end }}:</ins> <span class="text-notice-light dark:text-notice-dark">{{with .Get 0}}{{ . }}{{ end }}</span>
 </span>
