--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,19 +4,13 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 <!-- Favicons -->
-<link rel="apple-touch-icon" sizes="180x180" href='{{ relURL "favicons/apple-touch-icon.png" }}'>
-<link rel="icon" type="image/png" sizes="32x32" href='{{ relURL "favicons/favicon-32x32.png" }}'>
-<link rel="icon" type="image/png" sizes="16x16" href='{{ relURL "favicons/favicon-16x16.png" }}'>
-<link rel="manifest" href='{{ relURL "site.webmanifest" }}'>
+{{ partial "head/favicons.html" . }}
 
 <!-- Fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link href="https://fonts.googleapis.com/css2?family={{ site.Params.googleFontName }}&display=swap" rel="stylesheet"/>
+{{ partial "head/google_fonts.html" . }}
 
 <!-- Google Analytics -->
 {{ template "_internal/google_analytics.html" . }}
-{{ template "_internal/google_analytics_async.html" . }}
 
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
 {{ partialCached "head/css.html" . }}
