--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,7 +1,8 @@
 {{ define "main" }}
   {{- $page := . }}
   <div class="flex flex-col w-full items-center justify-center">
-    <div class="w-full m:w-4/5 xl:w-2/3 space-y-xl [&>*:nth-child(4n+3)]:after:left-none [&>*:nth-child(4n+5)]:after:right-none">
+    <div class="w-full m:w-4/5 xl:w-2/3 space-y-xl [&>*:nth-child(4n+3)]:after:left-none
+    [&>*:nth-child(4n+5)]:after:right-none">
       <div class="mb-l text-center text-xl">{{ .Content }}</div>
       {{- with site.Menus.main }}
         {{- partial "inline/menu/pageSummary.html" (dict "page" $page "menuEntries" .) }}
@@ -16,13 +17,15 @@
   {{- range $index, $entry := $entries }}
     {{ if $entry.HasChildren }}
       {{- with .Children }}
-        <div class="relative h-2xs bg-brand-light dark:bg-brand-dark after:absolute after:bg-brand-light dark:after:bg-brand-light after:-bottom-xs after:w-[10px] after:h-[10px] after:rounded-circle"></div>
+        <div class="relative h-2xs bg-brand-light dark:bg-brand-dark after:absolute after:bg-brand-light
+        dark:after:bg-brand-light after:-bottom-xs after:w-[10px] after:h-[10px] after:rounded-circle"></div>
         {{- partial "inline/menu/pageSummary.html" (dict "page" $page "menuEntries" .) }}
       {{ end }}
     {{ else }}
       {{- with $entry.Page }}
         {{ if ne ($index) (0) }}
-          <div class="relative h-2xs bg-brand-light dark:bg-brand-dark after:absolute after:bg-brand-light dark:after:bg-brand-light after:-bottom-xs after:w-[10px] after:h-[10px] after:rounded-circle"></div>
+          <div class="relative h-2xs bg-brand-light dark:bg-brand-dark after:absolute after:bg-brand-light
+          dark:after:bg-brand-light after:-bottom-xs after:w-[10px] after:h-[10px] after:rounded-circle"></div>
         {{ end }}
         <div id="{{ $entry.Identifier }}" class="article">
           {{ if eq ($entry.Identifier) ("contactme") }}
